# d3-finance

./: README.md  d3finance.md
d3-finance-api/: pyproject.toml
d3-finance-api/d3_finance_api/: main.py
d3-finance-api/d3_finance_api/src/: app.py
d3-finance-api/d3_finance_api/src/api/: tags.py
d3-finance-api/d3_finance_api/src/api/v1/endpoints/: contas_controller.py  despesa_controller.py  importacao_controller.py  receita_controller.py  usuario_controller.py
d3-finance-api/d3_finance_api/src/database/: database.py  models.py
d3-finance-api/d3_finance_api/src/schemas/: contas_schemas.py  despesa_schemas.py  receita_schemas.py  usuario_schemas.py
d3-finance-api/d3_finance_api/src/utils/: auth_utils.py
front-end/: README.md  angular.json  bancoTabelas  estrutura.md  package-lock.json  package.json
front-end/src/: index.html  styles.css  styles.scss
front-end/src/app/: app.component.ts  app.config.ts  app.routes.ts
front-end/src/app/models/: RequestCadastro.ts  RequestContas.ts  RequestDespesas.ts  RequestReceitas.ts
front-end/src/app/service/: contas.service.ts  despesas.service.ts  receitas.service.ts  usuario.service.ts
front-end/src/app/views/private/cadastro-contas/: cadastro-contas.component.css  cadastro-contas.component.html  cadastro-contas.component.ts
front-end/src/app/views/private/cadastro-despesas/: cadastro-despesas.component.html  cadastro-despesas.component.spec.ts  cadastro-despesas.component.ts
front-end/src/app/views/private/cadastro-receitas/: cadastro-receitas.component.html  (+2 more)
front-end/src/environments/: environment.prod.ts
(+33 files in other folders)
